[package]
authors = ["Oli Dacombe <olidacombe@gmail.com>"]
description = "Make sure your branch names are good to drive"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "refalizer"
repository = "https://github.com/olidacombe/refalizer"
version = "0.1.0"

[dependencies]
color-eyre = "0.6.2"
thiserror = "1.0.58"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]
